RESOLVED FIXED39503
incorrect selection with absolutely positioned div.
https://bugs.webkit.org/show_bug.cgi?id=39503
Summary incorrect selection with absolutely positioned div.
Ojan Vafai
Reported 2010-05-21 11:22:01 PDT
Created attachment 56732 [details] test case See the test case.
Attachments
test case (281 bytes, text/html)
2010-05-21 11:22 PDT, Ojan Vafai
no flags
fixes the bug (5.13 KB, patch)
2011-09-19 14:36 PDT, Ryosuke Niwa
kenneth: review+
Ryosuke Niwa
Comment 1 2011-09-19 14:26:36 PDT
The problem is that RenderBlock::positionForPoint assumes that the lastChildBox is not positioned. if (lastChildBox() && contentsY > lastChildBox()->y()) { for (RenderBox* childBox = lastChildBox(); childBox; childBox = childBox->previousSiblingBox()) { if (isChildHitTestCandidate(childBox)) return positionForPointRespectingEditingBoundaries(this, childBox, pointInContents); } } else { +mitz since this code was added in http://trac.webkit.org/changeset/42467.
Ryosuke Niwa
Comment 2 2011-09-19 14:36:18 PDT
Created attachment 107921 [details] fixes the bug
Ryosuke Niwa
Comment 3 2011-09-19 14:39:28 PDT
Comment on attachment 107921 [details] fixes the bug Oops, something's wrong with my patch.
Kenneth Rohde Christiansen
Comment 4 2011-09-19 14:42:36 PDT
> LayoutTests/ChangeLog:9 > + with a absolutely positioned last child. WebKit should place the caret on the left of the first line I guess it is "an absolutely"
Ryosuke Niwa
Comment 5 2011-09-19 14:46:20 PDT
Comment on attachment 107921 [details] fixes the bug Nope. My patch is fine. I was commenting out some code to verify my test and had forgotten to rebuild before running the test.
Kenneth Rohde Christiansen
Comment 6 2011-09-19 14:47:17 PDT
Comment on attachment 107921 [details] fixes the bug Nice test and good catch, r=me
Ryosuke Niwa
Comment 7 2011-09-19 14:47:52 PDT
(In reply to comment #6) > (From update of attachment 107921 [details]) > Nice test and good catch, r=me Thanks for the review! WIll fix "a absolutely".
Ryosuke Niwa
Comment 8 2011-09-19 14:50:41 PDT
Note You need to log in before you can comment on or make changes to this bug.